Maternidad Plena CR Landing Page

--- a/js/components/footer/footer.html
+++ b/js/components/footer/footer.html
@@ -9,11 +9,11 @@
           <a href="#inicio">Inicio</a>
           <a href="#acerca">Acerca de</a>
           <a href="#servicios">Servicios</a>
-          <a href="#contacto">Contacto</a>
+          <a href="https://www.facebook.com/maternidadplenacr/about" target="_blank">Contacto</a>
         </nav>
         <div class="rrss-box" layout="row">
-          <a href="#" class="rrss facebook"></a>
-          <a href="#" class="rrss instagram"></a>
+          <a href="https://www.facebook.com/maternidadplenacr" class="rrss facebook" target="_blank"></a>
+          <a href="https://www.instagram.com/maternidadplenacr/" class="rrss instagram" target="_blank"></a>
         </div>
       </div>
     </div>
