--- a/js/components/header/header.html
+++ b/js/components/header/header.html
@@ -7,7 +7,7 @@
       <a href="#inicio">Inicio</a>
       <a href="#acerca">Acerca de</a>
       <a href="#servicios">Servicios</a>
-      <a href="#contacto">Contacto</a>
+      <a href="https://www.facebook.com/maternidadplenacr/about" target="_blank">Contacto</a>
     </nav>
   </div>
 </header>
