--- a/js/components/servicios/servicios.html
+++ b/js/components/servicios/servicios.html
@@ -6,11 +6,11 @@
             <div class="boton"></div>
             <p>Calculadora Edad Gestacional</p>
         </div>
-        <div class="control_post_parto  boton-wrapper" layout="column" layout-align="space-around center">
+        <div class="control_post_parto boton-wrapper" layout="column" layout-align="space-around center">
             <div class="boton"></div>
             <p>Control Post Parto</p>
         </div>
-        <div class="asesorias_rcp_primeros_auxilios  boton-wrapper" layout="column" layout-align="space-around center">
+        <div class="asesorias_rcp_primeros_auxilios boton-wrapper" layout="column" layout-align="space-around center">
             <div class="boton"></div>
             <p>Asesorías en RCP y Primeros Auxilios</p>
         </div>
@@ -65,11 +65,11 @@
 
     <div class="botonera" layout="column" flex="100" layout-align="space-around center" layout-margin hide-xl hide-lg
         hide-md hide-sm show-xs>
-        <div class="calculadora_edad_gestacional boton-wrapper" layout="column" layout-align="space-around center" data-aos="fade-up">
+        <div ng-click="showDialog('calculadora_edad_gestacional')" class="calculadora_edad_gestacional boton-wrapper" layout="column" layout-align="space-around center" data-aos="fade-up">
             <div class="boton"></div>
             <p>Calculadora Edad Gestacional</p>
         </div>
-        <div class="control_post_parto  boton-wrapper" layout="column" layout-align="space-around center" data-aos="fade-up">
+        <div ng-click="showDialog('control_post_parto')" class="control_post_parto boton-wrapper" layout="column" layout-align="space-around center" data-aos="fade-up">
             <div class="boton"></div>
             <p>Control Post Parto</p>
         </div>
@@ -97,7 +97,7 @@
             <div class="boton"></div>
             <p>Asesora en Lactancia Materna</p>
         </div>
-        <div class="asesorias_rcp_primeros_auxilios  boton-wrapper" layout="column" layout-align="space-around center" data-aos="fade-up">
+        <div class="asesorias_rcp_primeros_auxilios boton-wrapper" layout="column" layout-align="space-around center" data-aos="fade-up">
             <div class="boton"></div>
             <p>Asesorías en RCP y Primeros Auxilios</p>
         </div>
