--- a/js/components/servicios/servicios.css
+++ b/js/components/servicios/servicios.css
@@ -24,6 +24,7 @@
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  /*cursor: pointer;*/
 }
 
 .servicios .botonera .boton-wrapper p {
