--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -21,3 +21,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'MadelynFill-Trial-Regular';
+  src: url('/fonts/MadelynFill-Trial-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
